DigicielFull/force-app/main/default/objects/DealHub__DealHub_Workflow__c/DealHub__DealHub_Workflow__c.object-meta.xml
<CustomObject>
    <label>DealHub Workflow</label>
    <nameField>
        <label>DealHub Worklfow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DealHub Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>