DigicielFull/force-app/main/default/objects/DealHub__DealHub_Workflow__c/fields/DealHub__Status__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>