DigicielFull/force-app/main/default/objects/DealHub__DealHub_Workflow__c/fields/DealHub__Step__c.field-meta.xml
<CustomField>
    <fullName>DealHub__Step__c</fullName>
    <label>Step</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>