DigicielFull/force-app/main/default/objects/DealHub__DealHub_Workflow__c/fields/DealHub__User__c.field-meta.xml
<CustomField>
    <fullName>DealHub__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealHub_Workflows</relationshipName>
    <type>Lookup</type>
</CustomField>